--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </style>
     </head>
     <body>
-      <div class = "main-title">Decolonisation Update - 0.9b Released for 11:59</div>
+      <div class = "main-title">Ultimate Overhaul Released - Version 1.0</div>
       <hr class = "rule">
       <!--Note to Self: Image Boundaries are 500x200 pixels-->
-      <img src = "https://i.ibb.co/mR89cBz/20190110160859-1.jpg" width = "60%" draggable = "false" align = "left">
+      <img src = "https://i.ibb.co/Ms6HJTh/Evstafiev-helicopter-shot-down.jpg" width = "60%" draggable = "false" align = "left">
       <div style = "overflow-y: auto;">
         <div class = "main-text">
           Get ready to try to hold on to your crumbling empire in this new update for 11:59.  Britain, France, the Netherlands, Belgium, Spain, and Portugal's empires are quickly crumbling with the old order. How will you handle this tumultuous period?
