--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class = "main-title">Ultimate Overhaul Released - Version 1.0</div>
       <hr class = "rule">
       <!--Note to Self: Image Boundaries are 500x200 pixels-->
-      <img src = "https://i.ibb.co/Ms6HJTh/Evstafiev-helicopter-shot-down.jpg" width = "60%" draggable = "false" align = "left">
+      <img src = "https://i.ibb.co/0rWNJjG/140828132531-01-world-war-ii-0828-horizontal-large-gallery.png" width = "60%" draggable = "false" align = "left">
       <div style = "overflow-y: auto;">
         <div class = "main-text">
           Get ready to try to hold on to your crumbling empire in this new update for 11:59.  Britain, France, the Netherlands, Belgium, Spain, and Portugal's empires are quickly crumbling with the old order. How will you handle this tumultuous period?
