--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <img src = "https://i.ibb.co/0rWNJjG/140828132531-01-world-war-ii-0828-horizontal-large-gallery.png" width = "60%" draggable = "false" align = "left">
       <div style = "overflow-y: auto;">
         <div class = "main-text">
-          Get ready to try to hold on to your crumbling empire in this new update for 11:59.  Britain, France, the Netherlands, Belgium, Spain, and Portugal's empires are quickly crumbling with the old order. How will you handle this tumultuous period?
+          Are you tryna look back to the bloodiest century of all history or go even further away? Maybe you want to look how life was next to the Iron Curtain or the Millenium. Than well, this mod is for you as it adds lot of DLCS that are Free! It also adds decision trees, seasons, religions, ideological support, elections, more type of vassals, secret service, values of terrain, so planning before wars is nescessary
           <br>
           Find out in 11:59!
         </div>
