--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class = "main-text">
           Are you tryna look back to the bloodiest century of all history or go even further away? Maybe you want to look how life was next to the Iron Curtain or the Millenium. Than well, this mod is for you as it adds lot of DLCS that are Free! It also adds decision trees, seasons, religions, ideological support, elections, more type of vassals, secret service, values of terrain, so planning before wars is nescessary
           <br>
-          Find out in 11:59!
+          Only in Ultimate Overhaul!
         </div>
       </div>
     </body>
