--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700|Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
         <style type = "text/css">
             html:hover,head:hover,body:hover {
-                cursor: url("https://i.ibb.co/PcRpLcs/cursor.png"), auto;
+                cursor: url("https://i.imgur.com/952gkuc.png"), auto;
             }
             html,head,body {
                 background-color: rgb(48, 45, 48);
