--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700|Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
         <style type = "text/css">
             html:hover,head:hover,body:hover {
-                cursor: url("https://i.imgur.com/952gkuc.png"), auto;
+                cursor: url("https://i.imgur.com/tFJzCIY.png"), auto;
             }
             html,head,body {
                 background-color: rgb(48, 45, 48);
@@ -36,15 +36,15 @@
         </style>
     </head>
     <body>
-      <div class = "main-title">Ultimate Overhaul Released - Version 1.0</div>
+      <div class = "main-title">Colonial Wars Released - Version 1.0</div>
       <hr class = "rule">
       <!--Note to Self: Image Boundaries are 500x200 pixels-->
-      <img src = "https://i.ibb.co/1G1HWw1/Total-Propaganda.png" width = "60%" draggable = "false" align = "left">
+      <img src = "https://i.imgur.com/EUVhHDY.png" width = "60%" draggable = "false" align = "left">
       <div style = "overflow-y: auto;">
         <div class = "main-text">
-          Are you tryna look back to the bloodiest century of all history or go even further away? Maybe you want to look how life was next to the Iron Curtain or the Millenium. Than well, this mod is for you as it adds lot of DLCS that are Free! It also adds decision trees, seasons, religions, ideological support, elections, more type of vassals, secret service, values of terrain, so planning before wars is nescessary
+          Colonial wars is a mod basaed on the the confilcts over silesia and and europe entering the napoleonic era.
           <br>
-          Only in Ultimate Overhaul!
+          Only in Colonial Warsl!
         </div>
       </div>
     </body>
